no system.properties

--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
+				<configuration><!--
 					<source>1.8</source>
-					<target>1.8</target>
+					<target>1.8</target>-->
 					<includeSystemScope>true</includeSystemScope>
 					<excludes>
 						<exclude>
