service rebuild, jawsDB connected

--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration><!--
-					<source>1.8</source>
-					<target>1.8</target>-->
+				<configuration>
 					<includeSystemScope>true</includeSystemScope>
 					<excludes>
 						<exclude>
