--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,11 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 		
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-aws</artifactId>
 			<version>2.2.6.RELEASE</version>
-		</dependency>
+		</dependency>-->
 		
 	</dependencies>
 
