--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ mybatis.mapper-locations=classpath:mapper/**/*.xml
 spring.servlet.multipart.max-file-size=10MB
 
 #
-cloud.aws.credentials.accessKey=${S3ACCESSKEY}
-cloud.aws.credentials.secretKey=${S3SECRETKEY}
+cloud.aws.credentials.accessKey=AKIA2MB3DRTSJBVSO4VD
+cloud.aws.credentials.secretKey=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
 cloud.aws.stack.auto=false
 
 # AWS S3 Service bucket
