--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 #
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mydwteeej5pxgik8:tiig57d8ufgsxmvy@ro2padgkirvcf55m.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ho41cpe7gx41ynyt?serverTimezone=Asia/Seoul/
+spring.datasource.url=jdbc:mysql://mydwteeej5pxgik8:tiig57d8ufgsxmvy@ro2padgkirvcf55m.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ho41cpe7gx41ynyt??serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=mydwteeej5pxgik8
 spring.datasource.password=tiig57d8ufgsxmvy
 
