--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 
 #
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mydwteeej5pxgik8:tiig57d8ufgsxmvy@ro2padgkirvcf55m.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ho41cpe7gx41ynyt?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=mydwteeej5pxgik8
-spring.datasource.password=tiig57d8ufgsxmvy
+spring.datasource.url=${JAWSDB_URL}
+spring.datasource.username=${JAWSDB_USERNAME}
+spring.datasource.password=${JAWSDB_PASSWORD}
 
 #
 mybatis.config-location=classpath:mybatis-config.xml
@@ -15,8 +15,8 @@ mybatis.mapper-locations=classpath:mapper/**/*.xml
 spring.servlet.multipart.max-file-size=10MB
 
 #
-cloud.aws.credentials.accessKey=AKIA2MB3DRTSJBVSO4VD
-cloud.aws.credentials.secretKey=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
+cloud.aws.credentials.accessKey=${S3ACCESSKEY}
+cloud.aws.credentials.secretKey=${S3SECRETKEY}
 cloud.aws.stack.auto=false
 
 # AWS S3 Service bucket
